Fix for no bottom scrollbar after resize

--- a/css/prediction_results_viewer.css
+++ b/css/prediction_results_viewer.css
@@ -33,7 +33,7 @@
 }
 
 html, body {
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
 #loading {
